重新组织了一下目录

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,3 +1,31 @@
-*
+/*
 !*.vhd
 !*.bdf
+
+!/audio
+/audio/*
+!/audio/*.vhd
+
+!/i2c
+/i2c/*
+!/i2c/*.vhd
+
+!/camera
+/camera/*
+!/camera/*.vhd
+!/camera/*.bdf
+
+!/image_processing
+/image_processing/*
+!/image_processing/*.vhd
+!/image_processing/*.bdf
+
+!test_files
+/test_files/*
+!/test_files/*.vhd
+!/test_files/*.bdf
+
+!vga_display
+/vga_display/*
+!/vga_display/*.vhd
+!/vga_display/*.bdf
