--- a/src/.gitignore
+++ b/src/.gitignore
@@ -25,7 +25,7 @@
 !/test_files/*.vhd
 !/test_files/*.bdf
 
-!vga_display
-/vga_display/*
-!/vga_display/*.vhd
-!/vga_display/*.bdf
+!display
+/display/*
+!/display/*.vhd
+!/display/*.bdf
